src/grammar/lib/mcbParser.ts
// Generated from ./src/grammar/mcbParser.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { mcbParserListener } from "./mcbParserListener";
import { mcbParserVisitor } from "./mcbParserVisitor";


export class mcbParser extends Parser {
	public static readonly COMMANDS = 1;
	public static readonly Comment = 2;
	public static readonly WS = 3;
	public static readonly NL = 4;
	public static readonly DOT = 5;
	public static readonly COMMA = 6;
	public static readonly LPAREN = 7;
	public static readonly RPAREN = 8;
	public static readonly LSQUARE = 9;
	public static readonly RSQUARE = 10;
	public static readonly LCURL = 11;
	public static readonly RCURL = 12;
	public static readonly HASH = 13;
	public static readonly RANGE = 14;
	public static readonly RANGE_P_WS = 15;
	public static readonly RANGE_S_WS = 16;
	public static readonly RANGE_B_WS = 17;
	public static readonly MULT = 18;
	public static readonly MOD = 19;
	public static readonly DIV = 20;
	public static readonly ADD = 21;
	public static readonly SUB = 22;
	public static readonly COLON = 23;
	public static readonly NOT_WS = 24;
	public static readonly NOT_NO_WS = 25;
	public static readonly CONJ = 26;
	public static readonly DISJ = 27;
	public static readonly ASSIGNMENT = 28;
	public static readonly MULT_ASSIGNMENT = 29;
	public static readonly MOD_ASSIGNMENT = 30;
	public static readonly DIVINE_ASSIGNMENT = 31;
	public static readonly ADD_ASSIGNMENT = 32;
	public static readonly SUB_ASSIGNMENT = 33;
	public static readonly LANGLE = 34;
	public static readonly RANGLE = 35;
	public static readonly LE = 36;
	public static readonly GE = 37;
	public static readonly MC_NOT_EQ = 38;
	public static readonly AT_N_WS = 39;
	public static readonly AT_P_WS = 40;
	public static readonly AT_S_WS = 41;
	public static readonly AT_B_WS = 42;
	public static readonly ENTITY_SUFFIX = 43;
	public static readonly POS = 44;
	public static readonly POS_P_WS = 45;
	public static readonly POS_S_WS = 46;
	public static readonly ANC = 47;
	public static readonly ANC_P_WS = 48;
	public static readonly ANC_S_WS = 49;
	public static readonly FUN = 50;
	public static readonly END = 51;
	public static readonly IF = 52;
	public static readonly K_MATCHES = 53;
	public static readonly K_DATA = 54;
	public static readonly K_ENTITY = 55;
	public static readonly K_BLOCK = 56;
	public static readonly K_STORAGE = 57;
	public static readonly K_PREDICATE = 58;
	public static readonly K_SCORE = 59;
	public static readonly ELSE = 60;
	public static readonly WHILE = 61;
	public static readonly REPEAT = 62;
	public static readonly UNTIL = 63;
	public static readonly RealLiteral = 64;
	public static readonly FloatNS = 65;
	public static readonly FloatLiteral = 66;
	public static readonly DoubleLiteral = 67;
	public static readonly IntegerLiteral = 68;
	public static readonly Identifier = 69;
	public static readonly QUOTE_OPEN = 70;
	public static readonly UNICODE_CLASS_LL = 71;
	public static readonly UNICODE_CLASS_LM = 72;
	public static readonly UNICODE_CLASS_LO = 73;
	public static readonly UNICODE_CLASS_LT = 74;
	public static readonly UNICODE_CLASS_LU = 75;
	public static readonly UNICODE_CLASS_ND = 76;
	public static readonly UNICODE_CLASS_NL = 77;
	public static readonly QUOTE_CLOSE = 78;
	public static readonly LineStrText = 79;
	public static readonly COMMANDS_END = 80;
	public static readonly CommandStr = 81;
	public static readonly I_Comment = 82;
	public static readonly I_WS = 83;
	public static readonly I_NL = 84;
	public static readonly ErrorCharacter = 85;
	public static readonly RULE_mcb = 0;
	public static readonly RULE_topPriorityObject = 1;
	public static readonly RULE_statements = 2;
	public static readonly RULE_statement = 3;
	public static readonly RULE_commands = 4;
	public static readonly RULE_declaration = 5;
	public static readonly RULE_variableDeclaration = 6;
	public static readonly RULE_scoreboardDeclaration = 7;
	public static readonly RULE_functionDeclaration = 8;
	public static readonly RULE_block = 9;
	public static readonly RULE_ifStatement = 10;
	public static readonly RULE_loopStatement = 11;
	public static readonly RULE_whileDo = 12;
	public static readonly RULE_repeatUntil = 13;
	public static readonly RULE_repeatUntilBlock = 14;
	public static readonly RULE_disconjuction = 15;
	public static readonly RULE_conjuction = 16;
	public static readonly RULE_comparison = 17;
	public static readonly RULE_asComparison = 18;
	public static readonly RULE_scoreNscoreExpression = 19;
	public static readonly RULE_scoreNrangeExpression = 20;
	public static readonly RULE_range = 21;
	public static readonly RULE_entityNBTExpression = 22;
	public static readonly RULE_blockExpression = 23;
	public static readonly RULE_comparator = 24;
	public static readonly RULE_blockTag = 25;
	public static readonly RULE_locateStatement = 26;
	public static readonly RULE_position = 27;
	public static readonly RULE_posPrefix = 28;
	public static readonly RULE_posSuffix = 29;
	public static readonly RULE_anchor = 30;
	public static readonly RULE_ancPrefix = 31;
	public static readonly RULE_ancSuffix = 32;
	public static readonly RULE_locateLiteral = 33;
	public static readonly RULE_assignment = 34;
	public static readonly RULE_expression = 35;
	public static readonly RULE_asExpression = 36;
	public static readonly RULE_parentAssignableExpression = 37;
	public static readonly RULE_additiveExpression = 38;
	public static readonly RULE_multiplicativeExpression = 39;
	public static readonly RULE_scoreboardIdentifier = 40;
	public static readonly RULE_scoreboardLiteral = 41;
	public static readonly RULE_scoreboardUnaryPrefix = 42;
	public static readonly RULE_scoreboardTarget = 43;
	public static readonly RULE_literalConstant = 44;
	public static readonly RULE_assignmentOperator = 45;
	public static readonly RULE_additiveOperator = 46;
	public static readonly RULE_multiplicativeOperator = 47;
	public static readonly RULE_nbt = 48;
	public static readonly RULE_nbtEquality = 49;
	public static readonly RULE_asNBT = 50;
	public static readonly RULE_nbtSet = 51;
	public static readonly RULE_nbtArray = 52;
	public static readonly RULE_stringLiteral = 53;
	public static readonly RULE_entity = 54;
	public static readonly RULE_nl = 55;
	public static readonly RULE_nls = 56;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"mcb", "topPriorityObject", "statements", "statement", "commands", "declaration", 
		"variableDeclaration", "scoreboardDeclaration", "functionDeclaration", 
		"block", "ifStatement", "loopStatement", "whileDo", "repeatUntil", "repeatUntilBlock", 
		"disconjuction", "conjuction", "comparison", "asComparison", "scoreNscoreExpression", 
		"scoreNrangeExpression", "range", "entityNBTExpression", "blockExpression", 
		"comparator", "blockTag", "locateStatement", "position", "posPrefix", 
		"posSuffix", "anchor", "ancPrefix", "ancSuffix", "locateLiteral", "assignment", 
		"expression", "asExpression", "parentAssignableExpression", "additiveExpression", 
		"multiplicativeExpression", "scoreboardIdentifier", "scoreboardLiteral", 
		"scoreboardUnaryPrefix", "scoreboardTarget", "literalConstant", "assignmentOperator", 
		"additiveOperator", "multiplicativeOperator", "nbt", "nbtEquality", "asNBT", 
		"nbtSet", "nbtArray", "stringLiteral", "entity", "nl", "nls",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, "'.'", "','", "'('", 
		"')'", "'['", "']'", "'{'", "'}'", "'#'", "'..'", undefined, undefined, 
		undefined, "'*'", "'%'", "'/'", "'+'", "'-'", "':'", undefined, "'!'", 
		"'and'", "'or'", "'='", "'*='", "'%='", "'/='", "'+='", "'-='", "'<'", 
		"'>'", "'<='", "'>='", "'=!'", "'@'", undefined, undefined, undefined, 
		undefined, "'~'", undefined, undefined, "'^'", undefined, undefined, "'fun'", 
		"'end'", "'if'", "'matches'", "'data'", "'entity'", "'block'", "'storage'", 
		"'predicate'", "'score'", "'else'", "'while'", "'repeat'", "'until'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "COMMANDS", "Comment", "WS", "NL", "DOT", "COMMA", "LPAREN", 
		"RPAREN", "LSQUARE", "RSQUARE", "LCURL", "RCURL", "HASH", "RANGE", "RANGE_P_WS", 
		"RANGE_S_WS", "RANGE_B_WS", "MULT", "MOD", "DIV", "ADD", "SUB", "COLON", 
		"NOT_WS", "NOT_NO_WS", "CONJ", "DISJ", "ASSIGNMENT", "MULT_ASSIGNMENT", 
		"MOD_ASSIGNMENT", "DIVINE_ASSIGNMENT", "ADD_ASSIGNMENT", "SUB_ASSIGNMENT", 
		"LANGLE", "RANGLE", "LE", "GE", "MC_NOT_EQ", "AT_N_WS", "AT_P_WS", "AT_S_WS", 
		"AT_B_WS", "ENTITY_SUFFIX", "POS", "POS_P_WS", "POS_S_WS", "ANC", "ANC_P_WS", 
		"ANC_S_WS", "FUN", "END", "IF", "K_MATCHES", "K_DATA", "K_ENTITY", "K_BLOCK", 
		"K_STORAGE", "K_PREDICATE", "K_SCORE", "ELSE", "WHILE", "REPEAT", "UNTIL", 
		"RealLiteral", "FloatNS", "FloatLiteral", "DoubleLiteral", "IntegerLiteral", 
		"Identifier", "QUOTE_OPEN", "UNICODE_CLASS_LL", "UNICODE_CLASS_LM", "UNICODE_CLASS_LO", 
		"UNICODE_CLASS_LT", "UNICODE_CLASS_LU", "UNICODE_CLASS_ND", "UNICODE_CLASS_NL", 
		"QUOTE_CLOSE", "LineStrText", "COMMANDS_END", "CommandStr", "I_Comment", 
		"I_WS", "I_NL", "ErrorCharacter",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(mcbParser._LITERAL_NAMES, mcbParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return mcbParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "mcbParser.g4"; }

	// @Override
	public get ruleNames(): string[] { return mcbParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return mcbParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(mcbParser._ATN, this);
	}
	// @RuleVersion(0)
	public mcb(): McbContext {
		let _localctx: McbContext = new McbContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, mcbParser.RULE_mcb);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 117;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === mcbParser.NL) {
				{
				{
				this.state = 114;
				this.match(mcbParser.NL);
				}
				}
				this.state = 119;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 123;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === mcbParser.HASH || _la === mcbParser.FUN) {
				{
				{
				this.state = 120;
				this.topPriorityObject();
				}
				}
				this.state = 125;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 126;
			this.match(mcbParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public topPriorityObject(): TopPriorityObjectContext {
		let _localctx: TopPriorityObjectContext = new TopPriorityObjectContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, mcbParser.RULE_topPriorityObject);
		try {
			this.state = 136;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case mcbParser.FUN:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 128;
				this.declaration();
				this.state = 130;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 2, this._ctx) ) {
				case 1:
					{
					this.state = 129;
					this.nl();
					}
					break;
				}
				}
				break;
			case mcbParser.HASH:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 132;
				this.scoreboardDeclaration();
				this.state = 134;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 3, this._ctx) ) {
				case 1:
					{
					this.state = 133;
					this.nl();
					}
					break;
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statements(): StatementsContext {
		let _localctx: StatementsContext = new StatementsContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, mcbParser.RULE_statements);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 147;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === mcbParser.COMMANDS || ((((_la - 50)) & ~0x1F) === 0 && ((1 << (_la - 50)) & ((1 << (mcbParser.FUN - 50)) | (1 << (mcbParser.IF - 50)) | (1 << (mcbParser.WHILE - 50)) | (1 << (mcbParser.REPEAT - 50)) | (1 << (mcbParser.Identifier - 50)))) !== 0)) {
				{
				this.state = 138;
				this.statement();
				this.state = 144;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 5, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 139;
						this.nls();
						this.state = 140;
						this.statement();
						}
						}
					}
					this.state = 146;
					this._errHandler.sync(this);
					_alt = this.interpreter.adaptivePredict(this._input, 5, this._ctx);
				}
				}
			}

			this.state = 150;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 7, this._ctx) ) {
			case 1:
				{
				this.state = 149;
				this.nls();
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let _localctx: StatementContext = new StatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, mcbParser.RULE_statement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 157;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case mcbParser.FUN:
				{
				this.state = 152;
				this.declaration();
				}
				break;
			case mcbParser.Identifier:
				{
				this.state = 153;
				this.assignment();
				}
				break;
			case mcbParser.WHILE:
			case mcbParser.REPEAT:
				{
				this.state = 154;
				this.loopStatement();
				}
				break;
			case mcbParser.IF:
				{
				this.state = 155;
				this.ifStatement();
				}
				break;
			case mcbParser.COMMANDS:
				{
				this.state = 156;
				this.commands();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public commands(): CommandsContext {
		let _localctx: CommandsContext = new CommandsContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, mcbParser.RULE_commands);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 159;
			this.match(mcbParser.COMMANDS);
			this.state = 160;
			this.match(mcbParser.CommandStr);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public declaration(): DeclarationContext {
		let _localctx: DeclarationContext = new DeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, mcbParser.RULE_declaration);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 162;
			this.functionDeclaration();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public variableDeclaration(): VariableDeclarationContext {
		let _localctx: VariableDeclarationContext = new VariableDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, mcbParser.RULE_variableDeclaration);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 164;
			this.scoreboardDeclaration();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public scoreboardDeclaration(): ScoreboardDeclarationContext {
		let _localctx: ScoreboardDeclarationContext = new ScoreboardDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, mcbParser.RULE_scoreboardDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 166;
			this.match(mcbParser.HASH);
			this.state = 167;
			this.match(mcbParser.Identifier);
			this.state = 168;
			this.match(mcbParser.COLON);
			this.state = 169;
			this.match(mcbParser.K_SCORE);
			this.state = 170;
			this.match(mcbParser.Identifier);
			this.state = 172;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === mcbParser.Identifier) {
				{
				this.state = 171;
				this.match(mcbParser.Identifier);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public functionDeclaration(): FunctionDeclarationContext {
		let _localctx: FunctionDeclarationContext = new FunctionDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, mcbParser.RULE_functionDeclaration);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 174;
			this.match(mcbParser.FUN);
			this.state = 175;
			this.match(mcbParser.Identifier);
			this.state = 176;
			this.block();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public block(): BlockContext {
		let _localctx: BlockContext = new BlockContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, mcbParser.RULE_block);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 178;
			this.match(mcbParser.COLON);
			this.state = 182;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 10, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 179;
					this.match(mcbParser.NL);
					}
					}
				}
				this.state = 184;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 10, this._ctx);
			}
			this.state = 185;
			this.statements();
			this.state = 189;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === mcbParser.NL) {
				{
				{
				this.state = 186;
				this.match(mcbParser.NL);
				}
				}
				this.state = 191;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 192;
			this.match(mcbParser.END);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public ifStatement(): IfStatementContext {
		let _localctx: IfStatementContext = new IfStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, mcbParser.RULE_ifStatement);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 194;
			this.match(mcbParser.IF);
			this.state = 198;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === mcbParser.NL) {
				{
				{
				this.state = 195;
				this.match(mcbParser.NL);
				}
				}
				this.state = 200;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 201;
			this.disconjuction();
			this.state = 205;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === mcbParser.NL) {
				{
				{
				this.state = 202;
				this.match(mcbParser.NL);
				}
				}
				this.state = 207;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 208;
			this.block();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public loopStatement(): LoopStatementContext {
		let _localctx: LoopStatementContext = new LoopStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, mcbParser.RULE_loopStatement);
		try {
			this.state = 212;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case mcbParser.WHILE:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 210;
				this.whileDo();
				}
				break;
			case mcbParser.REPEAT:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 211;
				this.repeatUntil();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public whileDo(): WhileDoContext {
		let _localctx: WhileDoContext = new WhileDoContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, mcbParser.RULE_whileDo);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 214;
			this.match(mcbParser.WHILE);
			this.state = 218;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === mcbParser.NL) {
				{
				{
				this.state = 215;
				this.match(mcbParser.NL);
				}
				}
				this.state = 220;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 221;
			this.disconjuction();
			this.state = 225;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === mcbParser.NL) {
				{
				{
				this.state = 222;
				this.match(mcbParser.NL);
				}
				}
				this.state = 227;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 228;
			this.block();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public repeatUntil(): RepeatUntilContext {
		let _localctx: RepeatUntilContext = new RepeatUntilContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, mcbParser.RULE_repeatUntil);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 230;
			this.match(mcbParser.REPEAT);
			this.state = 234;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === mcbParser.NL) {
				{
				{
				this.state = 231;
				this.match(mcbParser.NL);
				}
				}
				this.state = 236;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 237;
			this.repeatUntilBlock();
			this.state = 238;
			this.disconjuction();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public repeatUntilBlock(): RepeatUntilBlockContext {
		let _localctx: RepeatUntilBlockContext = new RepeatUntilBlockContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, mcbParser.RULE_repeatUntilBlock);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 240;
			this.match(mcbParser.COLON);
			this.state = 244;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 18, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 241;
					this.match(mcbParser.NL);
					}
					}
				}
				this.state = 246;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 18, this._ctx);
			}
			this.state = 247;
			this.statements();
			this.state = 251;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === mcbParser.NL) {
				{
				{
				this.state = 248;
				this.match(mcbParser.NL);
				}
				}
				this.state = 253;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 254;
			this.match(mcbParser.UNTIL);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
